<resources>
    <string name="app_name">Accessible Brisca</string>
    <string name="action_settings">Settings</string>
    <string name="sound">Sounds: </string>
    <string name="new_game">New game</string>
    <string name="rules">Rules</string>
    <string name="chose_level">Chose difficulty level:</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="settings_game">Game options</string>
    <string name="want_to_start">I want to start:</string>
    <string name="play">Play</string>
    <string name="win_message">YOU WIN!</string>
    <string name="lose_message">YOU LOSE!</string>
    <string name="draw_message">TIE!</string>
    <string name="your_points">Your points: </string>
    <string name="rival_points">Rival points: </string>
    <string name="replay">Play again </string>
    <string name="main_screen">Initial menu</string>
    <string name="general">General</string>
    <string name="rules_play">Play</string>
    <string name="rules_hands">Hands</string>
    <string name="rules_points">Points</string>
    <string name="content_general">- Two players card game\n
- Cards of the Spanish playing cards\n
Order cards:\n
 · 1\n
 · 3\n
 · Rest of the cards in decreasing order (12, 11, 10...)\n
- Objective: win more points than the rival</string>
    <string name="content_play">- Every player has 3 cards in his hand\n
- In every hand, each player uses one card and draws another one until all cards are used\n
- The brisca is the card that marks which suit rules over the match\n
- You can switch the brisca if you own the 7 of the same suit in your hand</string>
    <string name="content_hands">- The winner of the previous hand is the one who starts playing in the next hand\n
Who wins?\n
 · Wins the most powerful card with the same suit as the brisca suit\n
 · If there is not, wins the card more powerful that has the same suit as the first thrown card\n
- The player collects the points of the won cards</string>
    <string name="content_points">Value of the cards:\n
 - 1 = 11 points\n
 - 3 = 10 points\n
 - 12 = 4 points\n
 - 11 = 3 points\n
 - 10 = 2 points\n
 - Others = 0 points</string>
    <string name="deck">Deck</string>
    <string name="remaining_cards">Remaining cards: </string>
    <string name="brisca">The brisca is</string>
    <string name="rival_card">Rival card</string>
    <string name="current_points">Your points: </string>
    <string name="hand_win">Player wins</string>
    <string name="hand_lost">Rival wins</string>
    <string name="player_use">Player uses </string>
    <string name="rival_use">Rival uses </string>
    <string name="player_draws">Player draws </string>
    <string name="last_hands">Last hands </string>
    <string name="change_brisca">Player changes brisca </string>
    <string name="change_brisca2"> for </string>
    <string name="alert_title">Leave game</string>
    <string name="alert_message">The game is not going to be saved! Are you sure that you want to leave?</string>
    <string name="alert_confirm">Yes</string>
    <string name="alert_deny">No</string>
    <string name="suit_spades">Swords</string>
    <string name="suit_cups">Cups</string>
    <string name="suit_gold">Gold</string>
    <string name="suit_clubs">Clubs</string>
</resources>
