<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@drawable/gradient"

app:layout_behavior="@string/appbar_scrolling_view_behavior">


<TextView
    android:id="@+id/textWinner"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/colorPrimaryDark"
    android:text="@string/win_message"
    android:textSize="40sp"
    android:textColor="@color/colorText"
    android:fontFamily="casual"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.15"
    android:textAlignment="center"/>

<TextView
    android:id="@+id/textPointsWinner"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/colorPrimaryDark"
    android:text="@string/your_points"
    android:textSize="20sp"
    android:textColor="@color/colorText"
    android:fontFamily="casual"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.4"
    android:textAlignment="center"/>


<Button
    android:backgroundTint="@color/colorButton"
    android:textColor="@color/colorButtonText"
    android:id="@+id/buttonWinNewGame"
    android:layout_width="0px"
    android:layout_height="0px"
    app:layout_constraintHeight_percent="0.20"
    app:layout_constraintWidth_percent="0.40"
    android:text="@string/replay"
    android:contentDescription="@string/replay"
    android:textSize="16sp"
    android:fontFamily="casual"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintHorizontal_bias="0.1"
    app:layout_constraintVertical_bias="0.90" />
<Button
    android:backgroundTint="@color/colorButton"
    android:textColor="@color/colorButtonText"
    android:id="@+id/buttonWinBackToMain"
    android:layout_width="0px"
    android:layout_height="0px"
    app:layout_constraintHeight_percent="0.20"
    app:layout_constraintWidth_percent="0.40"
    android:text="@string/main_screen"
    android:contentDescription="@string/main_screen"
    android:textSize="16sp"
    android:fontFamily="casual"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintHorizontal_bias="0.9"
    app:layout_constraintVertical_bias="0.90" />
</android.support.constraint.ConstraintLayout>