<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"

    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageButton
        android:id="@+id/buttonCard1"
        android:text="1copes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintWidth_percent="0.25"
        android:src="@drawable/image1espades"
        android:scaleType="fitXY"
        android:layout_width="0px"
        android:layout_height="0px"
        android:background="#00000000"/>

    <ImageButton
        android:id="@+id/buttonCard2"
        android:text="1bastos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintWidth_percent="0.25"
        android:scaleType="fitXY"
        android:layout_width="0px"
        android:layout_height="0px"
        android:background="#00000000"
        />


    <ImageButton
        android:id="@+id/buttonCard3"
        android:text="1oros"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintWidth_percent="0.25"
        android:scaleType="fitXY"
        android:layout_width="0px"
        android:layout_height="0px"
        android:background="#00000000"/>

    <ImageView
        android:id="@+id/deck"
        android:contentDescription="@string/deck"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintWidth_percent="0.40"
        android:src="@drawable/card_dorso"
        android:layout_width="0px"
        android:layout_height="0px"
        android:rotation="90"/>

    <TextView
        android:id="@+id/remainingCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text=" 48 "
        android:textSize="16sp"
        android:background="#FFFFFF"
        android:fontFamily="casual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintVertical_bias="0.360"
        app:layout_constraintWidth_percent="0.40"/>

    <ImageView
        android:id="@+id/rivalCard1"
        android:contentDescription="@string/rival_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent="0.25"
        android:src="@drawable/card_dorso"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <ImageView
        android:id="@+id/rivalCard2"
        android:contentDescription="@string/rival_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent="0.25"
        android:src="@drawable/card_dorso"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <ImageView
        android:id="@+id/rivalCard3"
        android:contentDescription="@string/rival_card"
        android:layout_width="0px"
        android:layout_height="0px"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent="0.25"
        android:src="@drawable/card_dorso"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/imgPal"
        android:layout_width="0px"
        android:layout_height="0px"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51"
        app:layout_constraintWidth_percent="0.15"
        android:src="@drawable/image1espades"
        android:scaleType="fitXY"
        android:rotation="0"
        android:background="#00000000"
        />
    <ImageView
        android:id="@+id/imgPlayerThrown"
        android:layout_width="0px"
        android:layout_height="0px"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.20"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50"
        app:layout_constraintWidth_percent="0.20"
        tools:visibility="visible" />
    <ImageView
        android:id="@+id/imgRivalThrown"
        android:layout_width="0px"
        android:layout_height="0px"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.20"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40"
        app:layout_constraintWidth_percent="0.20"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textYourPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/current_points"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

</android.support.constraint.ConstraintLayout>